samples/_failures_safe/1761407913_d26987_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1b3739df.c: In function ‘main’:
./samples/SAFE/__tmp_1b3739df.c:141:23: error: expected ‘;’ at end of input
  141 |                 printf
      |                       ^
      |                       ;
./samples/SAFE/__tmp_1b3739df.c:141:17: error: expected declaration or statement at end of input
  141 |                 printf
      |                 ^~~~~~
./samples/SAFE/__tmp_1b3739df.c:141:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1b3739df.c:141:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1b3739df.c:141:17: error: expected declaration or statement at end of input
